Fix main box margin-top on mobile

--- a/contents/css/main-mobile.styl
+++ b/contents/css/main-mobile.styl
@@ -189,6 +189,7 @@ ol.default
     -moz-column-count: 1 !important;
     column-width: 100% !important;
 
-#post
+#post,
+#page
   .box.style3
     margin-top: 5em;
